[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/vosk_loading_screen.gd" id="1_script"]
[ext_resource type="Theme" path="res://resources/ui/game_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.15, 0.12, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.45, 0.75, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="VoskLoadingScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.03, 0.08, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Loading Voice Recognition..."
horizontal_alignment = 1

[node name="SpinnerLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "‚óê"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Initializing Vosk speech recognition model..."
horizontal_alignment = 1

[node name="ProgressContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="Control/CenterContainer/VBoxContainer/ProgressContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
max_value = 100.0
show_percentage = false

[node name="PercentLabel" type="Label" parent="Control/CenterContainer/VBoxContainer/ProgressContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0%"
horizontal_alignment = 1

[node name="TipLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Tip: The voice recognition system helps you practice pronunciation!"
horizontal_alignment = 1
autowrap_mode = 2
